vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "192.168.0.0/16"

  tags = {
      Name = "talent-academy-vpc"
  }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
  
    tags = {
      Name = "talent-academy-igw"
    }
  }
  
resource "aws_eip" "nat_eip" {
    vpc = true
  }
  
resource "aws_nat_gateway" "nat_gw" {
    allocation_id = aws_eip.nat_eip.id
    connectivity_type = "public"
    subnet_id     = aws_subnet.public.id
  
    tags = {
      Name = "talent-academy-nat-gw"
    }
  

    depends_on = [aws_internet_gateway.igw]

}
